k8s/prefect/prefect-worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-worker
  namespace: pfe
  labels:
    app: prefect-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect-worker
  template:
    metadata:
      labels:
        app: prefect-worker
    spec:
      containers:
        - name: prefect-worker
          image: laurealdente/prefect-worker:v8
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          command: ["/bin/bash", "-c"]
          args:
            - |
              cd /app
              prefect deploy --all
              prefect worker start --pool pfe-pool --type process
          volumeMounts:
            - name: slurm-ssh-secret
              mountPath: /secrets/slurm
              readOnly: true
      volumes:
        - name: slurm-ssh-secret
          secret:
            secretName: slurm-ssh-key
            defaultMode: 0400
