k8s/prefect/prefect_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prefect-service
  namespace: pfe
spec:
  selector:
    app: prefect
  ports:
    - port: 4200
      targetPort: 4200
