k8s/prefect/prefect_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ingress
  namespace: pfe
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - prefect.exemple.com
      secretName: prefect-tls-cert
  rules:
    - host: prefect.exemple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-service
                port:
                  number: 4200
